# gneiss

./: Cargo.toml  README.md
src/: ast.rs  compile.rs  lsp.rs  main.rs  text.rs  typ.rs
src/lsp/: completion.rs  document.rs  hover.rs
tree-sitter-gneiss/: Cargo.toml  grammar.js  package-lock.json  package.json
tree-sitter-gneiss/queries/: highlights.scm  indents.scm  textobjects.scm
