[package]
name = "gneiss"
version = "0.1.0"
edition = "2021"
description = "The Gneiss programming language"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/gneiss"
keywords = ["language", "compiler"]
categories = ["compilers"]

[dependencies]
gumdrop = "0.8.1"
tree-sitter = "0.20.9"
tree-sitter-gneiss.path = "tree-sitter-gneiss"
