[package]
name = "gneiss"
version = "0.1.0"
edition = "2021"
description = "The Gneiss programming language"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/gneiss"
keywords = ["language", "compiler"]
categories = ["compilers"]

[dependencies]
gumdrop = "0.8.1"
internment = "0.7.0"
log = "0.4.17"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
ropey = "1.6.0"
serde_json = "1.0.94"
simplelog = { version = "0.12.1", default-features = false }
tree-sitter = "0.20.9"
tree-sitter-gneiss.path = "tree-sitter-gneiss"
