[package]
name = "tree-sitter-gneiss"
description = "gneiss grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "gneiss"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Johan-Mi/gneiss"
edition = "2018"
license = "Unlicense"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
